@@ -65,6 +65,20 @@
          <TABLE>
             <TR>
                <TD VALIGN=top>
+                  <B>August 7, 2003:</B>&nbsp;
+               </TD>
+               <TD>
+                  New Tcl/Java 1.3.1 release!<BR>
+                  <UL>
+                     <LI>Works best with Tcl 8.4.4.</LI>
+                     <LI>Fix build bugs under Win32 and Unix.</LI>
+                     <LI>Fix encoding bug in defineclass cmd.</LI>
+                     <LI>Fix JNI link error under Win32.</LI>
+                  </UL>
+               </TD>
+            </TR>
+            <TR>
+               <TD VALIGN=top>
                   <B>March 17, 2003:</B>&nbsp;
                </TD>
                <TD>
