@@ -1,3 +1,8 @@
+2003-08-17  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* docs/website/faq.html: Add entry about stubs.
+	* docs/website/index.html: Add 1.3.1 release news.
+
 2003-08-07  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	Add tcljava-131-2003-08-07 tag to mark the
